fix: fix layout shift
define width of github profile card and set font-display to optional

--- a/packages/post-it/src/components/GithubProfile/GithubProfile.module.scss
+++ b/packages/post-it/src/components/GithubProfile/GithubProfile.module.scss
@@ -1,4 +1,5 @@
 .profile {
+  width: 30vw;
   display: flex;
   flex-direction: column;
   gap: var(--common-spacing);
